--- a/aura/src/styles/index.css
+++ b/aura/src/styles/index.css
@@ -3,7 +3,7 @@
 @tailwind components;
 @tailwind utilities; */
 
-/* Tus estilos personalizados pueden ir aquí */
+/* Estilos personalizados */
 /* @layer base {
   body {
     @apply bg-gray-50;
