--- a/aura/src/styles/index.css
+++ b/aura/src/styles/index.css
@@ -3,6 +3,15 @@
 @tailwind components;
 @tailwind utilities; */
 
+* {
+  box-sizing: border-box;
+  /* border: 1px solid red; */
+}
+
+html {
+  overflow-x: hidden;
+}
+
 /* Estilos personalizados */
 @layer components {
   .container {
